feature forgot password

--- a/back/.env
+++ b/back/.env
@@ -1,7 +1,7 @@
-HOSTDB = 207.210.229.68
-USERDB = villafuerte
-PASSWORD_DB = Villafuerte1986
-DB_DB= app
+HOSTDB = localhost
+USERDB = root
+PASSWORD_DB = Jiqui50800%
+DB_DB= cafeteria_upa
 PORT_DB = 3306 
 JWT_SECRET= Jiqui50800%_ISC_701
 USER_EMAIL=upacafeteria@gmail.com
