--- a/back/package.json
+++ b/back/package.json
@@ -23,7 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.2",
     "nodemailer": "^7.0.10",
-    "puppeteer": "^24.28.0",
+    "puppeteer": "18.2.1",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.8.1",
     "termii-nodejs": "^1.1.4",
