--- a/back/package.json
+++ b/back/package.json
@@ -24,6 +24,7 @@
     "mysql2": "^3.15.2",
     "nodemailer": "^7.0.10",
     "qrcode-terminal": "^0.12.0",
+    "resend": "^6.4.2",
     "socket.io": "^4.8.1",
     "termii-nodejs": "^1.1.4",
     "twilio": "^5.10.4",
