--- a/back/package.json
+++ b/back/package.json
@@ -14,6 +14,7 @@
   "packageManager": "pnpm@10.15.0",
   "dependencies": {
     "Router": "^2.1.0",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
