--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.29.0",
+    "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/x-data-grid": "^8.17.0",
     "axios": "^1.13.1",
